Refactor: update stream collect to toList