@@ -88,6 +88,6 @@ public class TransactionService {
             dto.setAmount(transaction.getAmount());
             dto.setTransactionDate(transaction.getTransactionDate());
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
